--- a/sidmool/index.html
+++ b/sidmool/index.html
@@ -17,11 +17,12 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- 공통 -->
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/sidmool-main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- script -->
     <script src="js/jquery.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/sidmool-main.js"></script>
+    <script src="js/slide.js"></script>
     <!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -60,152 +61,15 @@
               <li>
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span>ITEM</span><span class="ko">제품</span></a>
                 <ul class="dropdown-menu submenu-all" role="menu">
-                  <li><a href="#" class="test">전체보기<span class="caret"></span></a>
-                    <ul role="menu" class="menu">
-                      <li><a href="#">신제품</a></li>
-                      <li><a href="#">클렌징</a></li>
-                      <li><a href="#">수제비누</a></li>
-                      <li><a href="#">수분크림</a></li>
-                      <li><a href="#">앰플</a></li>
-                      <li><a href="#">에센스세럼</a></li>
-                      <li><a href="#">수분젤</a></li>
-                      <li><a href="#">로션</a></li>
-                      <li><a href="#">크림</a></li>
-                      <li><a href="#">썬스크린</a></li>
-                      <li><a href="#">무기자차</a></li>
-                      <li><a href="#">각질관리</a></li>
-                      <li><a href="#">마스크팩</a></li>
-                      <li><a href="#">바디</a></li>
-                      <li><a href="#">색조</a></li>
-                      <li><a href="#">립 & 아이케어</a></li>
-                      <li><a href="#">페이스 & 바디오일</a></li>
-                      <li><a href="#">스킨토너미스트</a></li>
-                      <li><a href="#">스킨케어브러쉬</a></li>
-                      <li><a href="#">헤어</a></li>
-                      <li><a href="#">화장소품</a></li>
-                      <li><a href="#">건강식품</a></li>
-                      <li><a href="#">임산부추천</a></li>
-                      <li><a href="#">우리아기추천</a></li>
-                      <li><a href="#">청소년화장품추천</a></li>
-                      <li><a href="#">세트할인</a></li>
-                      <li><a href="#">남성용화장품</a></li>
-                      <li><a href="#">민중기시리즈</a></li>
-                      <li><a href="#">이벤트</a></li>
-                      <li><a href="#">세탁용품</a></li>
-                      <!-- 성분라인별 -->
-                      <li><a href="#">달팽이</a></li>
-                      <li><a href="#">알로에</a></li>
-                      <li><a href="#">봉독</a></li>
-                      <li><a href="#">바하</a></li>
-                      <li><a href="#">아하</a></li>
-                      <li><a href="#">녹차(EGCG)</a></li>
-                      <li><a href="#">카렌듈라</a></li>
-                      <li><a href="#">아크바이</a></li>
-                      <li><a href="#">레드큐어</a></li>
-                      <li><a href="#">천연오일</a></li>
-                      <li><a href="#">메가펩타이드</a></li>
-                      <li><a href="#">콜라겐</a></li>
-                      <li><a href="#">호호바</a></li>
-                      <li><a href="#">휴먼올리고</a></li>
-                      <li><a href="#">뷰리즈</a></li>
-                      <li><a href="#">EGF</a></li>
-                      <li><a href="#">프로폴리스</a></li>
-                      <li><a href="#">히아루론산</a></li>
-                      <li><a href="#">세라마이드</a></li>
-                      <li><a href="#">티트리</a></li>
-                      <li><a href="#">아스타잔틴</a></li>
-                      <li><a href="#">사카로발효</a></li>
-                      <li><a href="#">닥터트럽</a></li>
-                      <li><a href="#">병풀</a></li>
-                      <li><a href="#">징크</a></li>
-                      <li><a href="#">동백</a></li>
-                      <li><a href="#">스킨소스</a></li>
-                      <li><a href="#">판테놀</a></li>
-                      <li><a href="#">닥터갈라톡</a></li>
-                    </ul>
+                  <li><a href="#" class="test">전체보기</a>
                   </li>
-                  <li><a href="#" class="test">기능별<span class="caret"></span></a>
-                    <ul role="menu" class="menu">
-                      <li><a href="#">신제품</a></li>
-                      <li><a href="#">클렌징</a></li>
-                      <li><a href="#">수제비누</a></li>
-                      <li><a href="#">수분크림</a></li>
-                      <li><a href="#">앰플</a></li>
-                      <li><a href="#">에센스세럼</a></li>
-                      <li><a href="#">수분젤</a></li>
-                      <li><a href="#">로션</a></li>
-                      <li><a href="#">크림</a></li>
-                      <li><a href="#">썬스크린</a></li>
-                      <li><a href="#">무기자차</a></li>
-                      <li><a href="#">각질관리</a></li>
-                      <li><a href="#">마스크팩</a></li>
-                      <li><a href="#">바디</a></li>
-                      <li><a href="#">색조</a></li>
-                      <li><a href="#">립 & 아이케어</a></li>
-                      <li><a href="#">페이스 & 바디오일</a></li>
-                      <li><a href="#">스킨토너미스트</a></li>
-                      <li><a href="#">스킨케어브러쉬</a></li>
-                      <li><a href="#">헤어</a></li>
-                      <li><a href="#">화장소품</a></li>
-                      <li><a href="#">건강식품</a></li>
-                      <li><a href="#">임산부추천</a></li>
-                      <li><a href="#">우리아기추천</a></li>
-                      <li><a href="#">청소년화장품추천</a></li>
-                      <li><a href="#">세트할인</a></li>
-                      <li><a href="#">남성용화장품</a></li>
-                      <li><a href="#">민중기시리즈</a></li>
-                      <li><a href="#">이벤트</a></li>
-                      <li><a href="#">세탁용품</a></li>
-                    </ul>
+                  <li><a href="#" class="test">기능별</a>
                   </li>
-                  <li><a href="#" class="test">성분라인별<span class="caret"></span></a>
-                    <ul role="menu" class="menu">
-                      <li><a href="#">달팽이</a></li>
-                      <li><a href="#">알로에</a></li>
-                      <li><a href="#">봉독</a></li>
-                      <li><a href="#">바하</a></li>
-                      <li><a href="#">아하</a></li>
-                      <li><a href="#">녹차(EGCG)</a></li>
-                      <li><a href="#">카렌듈라</a></li>
-                      <li><a href="#">아크바이</a></li>
-                      <li><a href="#">레드큐어</a></li>
-                      <li><a href="#">천연오일</a></li>
-                      <li><a href="#">메가펩타이드</a></li>
-                      <li><a href="#">콜라겐</a></li>
-                      <li><a href="#">호호바</a></li>
-                      <li><a href="#">휴먼올리고</a></li>
-                      <li><a href="#">뷰리즈</a></li>
-                      <li><a href="#">EGF</a></li>
-                      <li><a href="#">프로폴리스</a></li>
-                      <li><a href="#">히아루론산</a></li>
-                      <li><a href="#">세라마이드</a></li>
-                      <li><a href="#">티트리</a></li>
-                      <li><a href="#">아스타잔틴</a></li>
-                      <li><a href="#">사카로발효</a></li>
-                      <li><a href="#">닥터트럽</a></li>
-                      <li><a href="#">병풀</a></li>
-                      <li><a href="#">징크</a></li>
-                      <li><a href="#">동백</a></li>
-                      <li><a href="#">스킨소스</a></li>
-                      <li><a href="#">판테놀</a></li>
-                      <li><a href="#">닥터갈라톡</a></li>
-                    </ul>
+                  <li><a href="#" class="test">성분라인별</a>
                   </li>
-                  <li><a href="#" class="test">고민별<span class="caret"></span></a>
-                    <ul role="menu" class="menu">
-                      <li><a href="#">AC스팟</a></li>
-                      <li><a href="#">건성피부</a></li>
-                      <li><a href="#">복합성피부</a></li>
-                      <li><a href="#">민감성피부</a></li>
-                    </ul>
+                  <li><a href="#" class="test">고민별</a>
                   </li>
-                  <li><a href="#" class="test">내츄럴99<span class="caret"></span></a>
-                    <ul role="menu" class="menu">
-                      <li><a href="#">지성피부</a></li>
-                      <li><a href="#">건성피부</a></li>
-                      <li><a href="#">복합성피부</a></li>
-                      <li><a href="#">민감성피부</a></li>
-                    </ul>
+                  <li><a href="#" class="test">내츄럴99</a>
                   </li>
                 </ul>
               </li>
@@ -272,7 +136,7 @@
               <li><a href="#">공지사항</a></li>
               <li><a href="#">1:1문의</a></li>
               <li><a href="#">포토후기</a></li>
-              <li><a href="#">출석체크</a></li>
+              <!-- <li><a href="#">출석체크</a></li>
               <li><a href="#">시드물 매니아</a></li>
               <li><a href="#">모든 제품보기</a></li>
               <li><a href="#">신제품보기</a></li>
@@ -280,7 +144,7 @@
               <li><a href="#">해외배송</a></li>
               <li><a href="#">배송조회</a></li>
               <li><a href="#">등급별 할인</a></li>
-              <li><a href="#">사은품</a></li>
+              <li><a href="#">사은품</a></li> -->
             </ul>
           </li>
           <li>
@@ -299,48 +163,44 @@
     </header>
     <!-- header end -->
 
-    <!-- Swiper -->
-    <div class="swiper-container main">
-      <div class="swiper-wrapper main-swiper-wrapper">
-        <div class="swiper-slide main-swiper">
-          <a href="https://jar3543.github.io/github/sidmool/sub.html"><img src="images/main10.jpg" alt="사카로 광채 앰플"></a>
-          <div class="swiper-text">
-            <p>PERFECT SIDMOOL</p>
-            <p><strong>시드물</strong>과 함께 하세요!</p>
-          </div>
-          <button>scroll<i class="icon icon-right-open"></i></button>
-        </div>
-        <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main5.jpg" alt="마다가스카르 리얼수분 크림"></a>
-          <button>scroll<i class="icon icon-right-open"></i></button>
-        </div>
-        <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main6.jpg" alt="휴먼올리고 리페어크림"></a>
-          <button>scroll<i class="icon icon-right-open"></i></button>
-        </div>
-        <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main7.jpg" alt="무기자차 썬크림"></a>
-          <button>scroll<i class="icon icon-right-open"></i></button>
-        </div>
-        <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main8.jpg" alt="카카두 아미노 클렌저"></a>
-          <button>scroll<i class="icon icon-right-open"></i></button>
-        </div>
-        <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main9.jpg" alt="시드물 흉터케어젤"></a>
-          <button>scroll<i class="icon icon-right-open"></i></button>
-        </div>
-        <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main4.jpg" alt="민중기 앰플"></a>
-          <button>scroll<i class="icon icon-right-open"></i></button>
-        </div>
-        <div class="swiper-slide main-swiper">
-          <a href="#"><a href="#"><img src="images/main11.jpg" alt="스와이퍼이미지"></a>
-          <button>scroll<i class="icon icon-right-open"></i></button>
+
+    <!-- 메인 슬라이드 start-->
+    <article class="main_slide">
+      <div class="slide">
+        <ul>
+          <li>
+            <div class="center">
+              <img src="images/main_saccharo.png" alt="시드물 사카로 발효 광채 퍼스트 앰플.
+              칙칙하고 건조한 피부를 밝히는 발효 테라피. 고객 감사 앵콜 37% 이벤트">
+              <button class="btn_center" onclick="location.href = 'sub.html' ">자세히보기</button>
+            </div>
+          </li>
+          <li>
+            <div class="center">
+              <img src="images/main_v.png" alt="햇빛이 부족한 온 가족을 위한 시드물 웰빙 비타민D.
+              햇빛이 부족할 때 하루 두 방울. 1일 2방울(0.066ml) 약 151일 섭취량.
+              유로드롭형으로 정량 섭취 가능. 스위스산 비타민D / 無색 無취">
+              <button>자세히보기</button>
+            </div>
+          </li>
+        </ul>
+        <button class="icon icon-left-open"><span class="skip">이전</span></button>
+        <button class="icon icon-right-open"><span class="skip">다음</span></button>
+        <div class="pagination">
+          <ul>
+            <!-- <li><a href="" hre="#"><span class="skip">1</span></a></li>
+            <li><a href="" hre="#"><span class="skip">2</span></a></li> -->
+          </ul>
+          <button class="icon icon-pause"><span class="skip">재생/정지</span></button>
         </div>
       </div>
-    </div>
-    <!-- section end -->
+    </article>
+    <!-- 메인슬라이드 end -->
+
+
+
+
+
 
     <!-- 신제품 갤러리 -->
     <article class="new-p" id="n-product">
@@ -621,30 +481,31 @@
           통신판매업신고번호:제2008-대전중구-0247호<br>
           화장품 제조판매업 등록필증 제 1163
           서비스개선:help@sidmool.com 대표:민원기 개인정보관리자:나종민</p>
-        <small>copyright&copy; 2008 SIDMOOL. All right reservd.</small>
+        <small>copyright&copy; 2008 AREUM-JUN. All right reservd.</small>
       </div>
     </footer>
     <!-- footer end -->
 
     <script>
-    //네비게이션 포커스인/포커스아웃
-    $('nav .bgwrap .wrap .nav li a').on('focusin',function(){
-      $(this).next().show();
-    $('nav .bgwrap .wrap .nav li a').on('focusout',function(){
-      $(this).next().hide();
-    })
-  })
 
-    // quick bar
+    // quick bar(토글메뉴)
     $('.icon.icon-menu').on('click',function(){
       $('header').toggleClass('on');
       $(this).toggleClass('icon-menu icon-cancel');
     })
 
+    // $('.btn-nav li a').click(function(e){
+    //   e.preventDefault();
+    //   $(this).next().slideToggle();
+    // })
+
+    // 독립적으로 움직이게 함
     $('.btn-nav li a').click(function(e){
       e.preventDefault();
-      $(this).next().slideToggle();
+      $('.btn-nav li ul').slideUp();
+      $(this).next().slideDown();
     })
+
 
     //메인 스와이퍼 이미지 & 갤러리 마우스오버/마우스아웃 시
     var swiper = new Swiper('.main');
@@ -673,7 +534,7 @@
       console.log('제목바뀜');
     })
 
-    //데일리
+    //데일리 배너
     $(function(){
       var roll=1;
       setInterval(function(){
