--- a/sidmool/index.html
+++ b/sidmool/index.html
@@ -30,7 +30,7 @@
   <body>
     <!-- header -->
     <header>
-      <h1><img src="images/top_logo.png" alt="logo 이미지"></h1>
+      <h1><a href="https://jar3543.github.io/github/sidmool/index.html"><img src="images/top_logo.png" alt="로고 이미지"></h1></a>
       <!-- 통합검색 -->
       <div class="search">
         <input type="checkbox" id="btn-search-open">
@@ -276,88 +276,198 @@
       </ul>
     </article>
 
+    <!-- special care 스폐셜 케어 -->
     <section class="swiper-section">
-      <!-- 스와이퍼 슬라이드 -->
       <div class="wrap_gallary">
         <div class="swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <h1>SPECIAL CARE</h1>
-              <img src="images/special1.jpg" alt="스와이퍼이미지">
-              <div class="swiper-slide-main-text">
-                <h2>SIDMOOL</h2>
-                <p>NO.1 달팽이 에센스<br>
-                맑고 깨끗한 피부를 위해</p>
-                <button>자세히보기</button>
-              </div>
-              <div class="swiper-bg">
-                <a href="#"><span>마우스로 이미지를 옆으로 넘기세요!</span></a>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <h1>SPECIAL CARE</h1>
-              <img src="images/special2.jpg" alt="스와이퍼이미지">
-              <div class="swiper-slide-text">
-                <h2>SIDMOOL</h2>
-                <p>오리지널 베스트<br>
-                명품 발효 화장품</p>
-                <button>자세히보기</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <h1>SPECIAL CARE</h1>
-              <img src="images/special3.jpg" alt="스와이퍼이미지">
-              <div class="swiper-slide-text">
-                <h2>SIDMOOL</h2>
-                <p>생기 넘치는 피부를 꿈꾸는 레시피<br>
-                힘잃고 탄력을 일은 피부 링클 케어</p>
-                <button>자세히보기</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <h1>SPECIAL CARE</h1>
-              <img src="images/special4.jpg" alt="스와이퍼이미지">
-              <div class="swiper-slide-text">
-                <h2>SIDMOOL</h2>
-                <p>민중기 EGF는 다릅니다.<br>
-                최고함량과 저온 리포좀화 공법 제조</p>
-                <button>자세히보기</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <h1>SPECIAL CARE</h1>
-              <img src="images/special5.jpg" alt="스와이퍼이미지">
-              <div class="swiper-slide-text">
-                <h2>SIDMOOL</h2>
-                <p>NO.1 달팽이 에센스<br>
-                맑고 깨끗한 피부를 위해</p>
-                <button>자세히보기</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <h1>SPECIAL CARE</h1>
-              <img src="images/special6.jpg" alt="스와이퍼이미지">
-              <div class="swiper-slide-text">
-                <h2>SIDMOOL</h2>
-                <p>NO.1 달팽이 에센스<br>
-                맑고 깨끗한 피부를 위해</p>
-                <button>자세히보기</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <h1>SPECIAL CARE</h1>
-              <img src="images/special7.jpg" alt="스와이퍼이미지">
-              <div class="swiper-slide-text">
-                <h2>SIDMOOL</h2>
-                <p>NO.1 달팽이 에센스<br>
-                맑고 깨끗한 피부를 위해</p>
-                <button>자세히보기</button>
-              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <div class="wrap_sc">
+      <!-- 1 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="달팽이">
+            <img src="images/specialcare1.jpg" alt="스폐셜 케어 달팽이">
+          </a>
+        </div>
+        <figcaption>
+          달팽이
+        </figcaption>
+      </figure>
+      <!-- 2 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="사카로">
+            <img src="images/specialcare2.jpg" alt="스폐셜 케어 사카로">
+          </a>
+        </div>
+        <figcaption>
+          사카로
+        </figcaption>
+      </figure>
+      <!-- 3 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="휴먼올리고 리페어">
+            <img src="images/specialcare3.jpg" alt="스폐셜 케어 휴먼올리고리페어">
+          </a>
+        </div>
+        <figcaption>
+          휴먼올리고
+        </figcaption>
+      </figure>
+      <!-- 4 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="EGF">
+            <img src="images/specialcare4.jpg" alt="스폐셜 케어 이지에프">
+          </a>
+        </div>
+        <figcaption>
+          EGF
+        </figcaption>
+      </figure>
+      <!-- 5 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="내츄럴메이크업">
+            <img src="images/specialcare5.jpg" alt="스폐셜 케어 내츄럴메이크업">
+          </a>
+        </div>
+        <figcaption>
+          메이크업
+        </figcaption>
+      </figure>
+      <!-- 6 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="녹차">
+            <img src="images/specialcare6.jpg" alt="스폐셜 케어 녹차">
+          </a>
+        </div>
+        <figcaption>
+          녹차
+        </figcaption>
+      </figure>
+      <!-- 7 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="프로폴리스">
+            <img src="images/specialcare7.jpg" alt="스폐셜 케어 프로폴리스">
+          </a>
+        </div>
+        <figcaption>
+          프로폴리스
+        </figcaption>
+      </figure>
+      <!-- 8 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="아크바이">
+            <img src="images/specialcare8.jpg" alt="스폐셜 케어 아크바이">
+          </a>
+        </div>
+        <figcaption>
+          아크바이
+        </figcaption>
+      </figure>
+      <!-- 9 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="천연비누">
+            <img src="images/specialcare9.jpg" alt="스폐셜 케어 비누">
+          </a>
+        </div>
+        <figcaption>
+          천연비누
+        </figcaption>
+      </figure>
+      <!-- 10 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="알로에">
+            <img src="images/specialcare10.jpg" alt="스폐셜 케어 알로에">
+          </a>
+        </div>
+        <figcaption>
+          알로에
+        </figcaption>
+      </figure>
+      <!-- 11 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="각질관리">
+            <img src="images/specialcare11.jpg" alt="스폐셜 케어 각질관리">
+          </a>
+        </div>
+        <figcaption>
+          각질관리
+        </figcaption>
+      </figure>
+      <!-- 12 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="카렌듈라">
+            <img src="images/specialcare12.jpg" alt="스폐셜 케어 카렌듈라">
+          </a>
+        </div>
+        <figcaption>
+          카렌듈라
+        </figcaption>
+      </figure>
+      <!-- 13 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="콜라겐">
+            <img src="images/specialcare13.jpg" alt="스폐셜 케어 콜라겐">
+          </a>
+        </div>
+        <figcaption>
+          콜라겐
+        </figcaption>
+      </figure>
+      <!-- 14 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="티트리">
+            <img src="images/specialcare14.jpg" alt="스폐셜 케어 티트리">
+          </a>
+        </div>
+        <figcaption>
+          티트리
+        </figcaption>
+      </figure>
+      <!-- 15 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="산자나무">
+            <img src="images/specialcare15.jpg" alt="스폐셜 케어 산자나무">
+          </a>
+        </div>
+        <figcaption>
+          산자나무
+        </figcaption>
+      </figure>
+      <!-- 16 -->
+      <figure>
+        <div class="img_box">
+          <a href="#" title="아스타잔틴">
+            <img src="images/specialcare16.jpg" alt="스폐셜 케어 아스타잔틴">
+          </a>
+        </div>
+        <figcaption>
+          아스타잔틴
+        </figcaption>
+      </figure>
+
+    </div>
 
     <!-- 게시판 -->
     <div class="board">
@@ -412,42 +522,41 @@
     <article class="photo-sns">
       <!-- 포토후기 -->
       <div class="photo-wrap">
-        <button>포토리뷰보기</button>
-        <h4>PHOTO REVIEW</h4>
-        <p>내가 만난 제품과의 좋은 경험을<br>
-          사진과 함께 이야기를 올려주시는 곳입니다.</p>
+        <a href="#"><span class="skip">포토리뷰</span></a>
+        <span class="skip">PHOTO REVIEW</span>
+        <span class="skip">내가 만난 제품과의 좋은 경험을 사진과 함께 이야기를 올려주시는 곳입니다.</span>
       </div>
       <!-- sns -->
       <div class="sns-text-wrap">
-        <button>sns view</button>
-        <h4>SNS</h4>
+        <img src="images/sns.png" alt="sns이벤트">
+        <span class="skip">sns 인증 이벤트.</span>
       </div>
-      <div class="sns-wrap">
-        <div class="sns-images">
-          <div>
-            <img src="images/sns11.jpg" alt="sns 이미지">
-            <a href="#" class="icon icon-link"><span class="skip">자세히보기</span></a>
-          </div>
-          <div>
-            <img src="images/sns12.png" alt="sns 이미지">
-            <a href="#" class="icon icon-link"><span class="skip">자세히보기</span></a>
-          </div>
-          <div>
-            <img src="images/sns13.jpg" alt="sns 이미지">
-            <a href="#" class="icon icon-link"><span class="skip">자세히보기</span></a>
-          </div>
-          <div>
-            <img src="images/sns14.png" alt="sns 이미지">
-            <a href="#" class="icon icon-link"><span class="skip">자세히보기</span></a>
-          </div>
-        </div>
+      <!-- sidmool -->
+      <div class="widsidmool">
+        <img src="images/w_sidmool.png" alt="what's different? 시드물을 무엇이 다를까요?">
       </div>
     </article>
 
     <!-- 배너 -->
     <div class="banner">
-      <div class="banner-wrap">
-        <img src="images/bottom_banner1.jpg" alt="배너 이미지">
+      <div class="banner_wrap">
+        <ul>
+          <li><img src="images/bottom_banner1.png" alt="제휴업체1"></li>
+          <li><img src="images/bottom_banner2.png" alt="제휴업체2"></li>
+          <li><img src="images/bottom_banner3.png" alt="제휴업체3"></li>
+          <li><img src="images/bottom_banner4.png" alt="제휴업체4"></li>
+          <li><img src="images/bottom_banner5.png" alt="제휴업체5"></li>
+          <li><img src="images/bottom_banner6.png" alt="제휴업체6"></li>
+          <li><img src="images/bottom_banner7.png" alt="제휴업체7"></li>
+          <li><img src="images/bottom_banner1.png" alt="제휴업체1"></li>
+          <li><img src="images/bottom_banner2.png" alt="제휴업체2"></li>
+          <li><img src="images/bottom_banner3.png" alt="제휴업체3"></li>
+          <li><img src="images/bottom_banner4.png" alt="제휴업체4"></li>
+          <li><img src="images/bottom_banner5.png" alt="제휴업체5"></li>
+          <li><img src="images/bottom_banner6.png" alt="제휴업체6"></li>
+          <li><img src="images/bottom_banner7.png" alt="제휴업체7"></li>
+        </ul>
+        <!-- <img src="images/bottom_banner1.jpg" alt="배너 이미지"> -->
       </div>
     </div>
 
@@ -506,19 +615,7 @@
       $(this).next().slideDown();
     })
 
-
-    //메인 스와이퍼 이미지 & 갤러리 마우스오버/마우스아웃 시
-    var swiper = new Swiper('.main');
-    var swiper = new Swiper('.swiper-container');
-
-      $('.swiper-slide').on('mouseover',function(){
-        $('.swiper-bg').stop().show();
-      })
-      $('.swiper-slide').on('mouseout',function(){
-        $('.swiper-bg').stop().hide();
-      })
-
-    //탭메뉴
+    //추천 라인 추천 시리즈 탭메뉴
     $('.t1 a').on('focus click',function(e){
       e.preventDefault();
       $('.t2 a img').attr('src','images/tit_news.jpg')
