add sidmool sub page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -137,13 +137,27 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://jar3543.github.io/github/sidmool/index.html" class="gallery-box" data-toggle="modal" data-src="./assets/deer.jpg">
-                        <img src="./assets/sidmool-monitor-img.jpg" class="img-responsive" alt="Image 1">
+                        <img src="./assets/sidmool-monitor-img.jpg" class="img-responsive" alt="시드물 홈페이지 메인 페이지">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
                                     <i class="glyphicon glyphicon-link"></i>
                                     <p>시드물 홈페이지 리뉴얼</p>
-                                    <p>PC</p>
+                                    <p>PC(main page)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://jar3543.github.io/github/sidmool/sub.html" class="gallery-box" data-toggle="modal" data-src="./assets/deer.jpg">
+                        <img src="./assets/sidmool-monitor-img.jpg" class="img-responsive" alt="시드물 홈페이지 서브 페이지">
+                        <div class="gallery-box-caption">
+                            <div class="gallery-box-content">
+                                <div>
+                                    <i class="glyphicon glyphicon-link"></i>
+                                    <p>시드물 홈페이지 리뉴얼</p>
+                                    <p>PC(sub page)</p>
                                 </div>
                             </div>
                         </div>
