add sidmool sub

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -151,7 +151,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://jar3543.github.io/github/sidmool/sub.html" class="gallery-box" data-toggle="modal" data-src="./assets/deer.jpg">
-                        <img src="./assets/sidmool-monitor-img.jpg" class="img-responsive" alt="시드물 홈페이지 서브 페이지">
+                        <img src="./assets/sidmool_sub.png" class="img-responsive" alt="시드물 홈페이지 서브 페이지">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
