--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -137,7 +137,7 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://jar3543.github.io/github/sidmool/index.html" class="gallery-box" data-toggle="modal" data-src="./assets/deer.jpg">
-                        <img src="./assets/sidmool-monitor-img.jpg" class="img-responsive" alt="시드물 홈페이지 메인 페이지">
+                        <img src="./assets/sidmool_main.png" class="img-responsive" alt="시드물 홈페이지 메인 페이지">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
