--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -195,12 +195,26 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://jar3543.github.io/github/F&B/F&B-000000.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
-                        <img src="./assets/dodream.jpg" class="img-responsive" alt="Image 2">
+                        <img src="./assets/dodream.jpg" class="img-responsive" alt="평광교회 청년부 홈페이지">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
                                     <i class="glyphicon glyphicon-link"></i>
-                                    <p>평광교회 청년부 웹사이트 제작 중</p>
+                                    <p>평광교회 청년부 홈페이지</p>
+                                    <p>PC(상세페이지 디자인)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://jar3543.github.io/github/23.scroll/scrollspy_song.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
+                        <img src="./assets/scroll.png" class="img-responsive" alt="자체제작 웹 사이트">
+                        <div class="gallery-box-caption">
+                            <div class="gallery-box-content">
+                                <div>
+                                    <i class="glyphicon glyphicon-link"></i>
+                                    <p>자체제작 웹 사이트</p>
                                     <p>PC</p>
                                 </div>
                             </div>
