--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -44,7 +44,7 @@
     <header id="first">
       <div class="header-content">
           <div class="inner">
-              <h1 class="">I AM ARUEM JOEN</h1>
+              <h1 class="">I AM AREUM JEON</h1>
           </div>
       </div>
       <div class="header-content-bg">
