--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -208,13 +208,27 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://jar3543.github.io/github/23.scroll/scrollspy_song.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
-                        <img src="./assets/scroll.png" class="img-responsive" alt="자체제작 웹 사이트">
+                    <a href="https://jar3543.github.io/github/motte/motte.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
+                        <img src="./assets/motte.png" class="img-responsive" alt="자체제작 웹 사이트">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
                                     <i class="glyphicon glyphicon-link"></i>
-                                    <p>자체제작 웹 사이트</p>
+                                    <p>MOTTE 소개 사이트(자체제작)</p>
+                                    <p>PC</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://jar3543.github.io/github/megabox/megabox.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
+                        <img src="./assets/megabox_sub.png" class="img-responsive" alt="자체제작 웹 사이트">
+                        <div class="gallery-box-caption">
+                            <div class="gallery-box-content">
+                                <div>
+                                    <i class="glyphicon glyphicon-link"></i>
+                                    <p>메가박스 서브페이지 리뉴얼</p>
                                     <p>PC</p>
                                 </div>
                             </div>
