--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -222,7 +222,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://jar3543.github.io/github/megabox/megabox.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
+                    <a href="https://jar3543.github.io/github/megabox/index.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
                         <img src="./assets/megabox_sub.png" class="img-responsive" alt="자체제작 웹 사이트">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
