--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>Areum Jeon | Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Quicksand|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -18,12 +18,20 @@
     <link rel="stylesheet" href="css/easypiechart.css">
   </head>
   <body>
+
     <!-- loading ============================================================-->
     <!-- <div class="wrap_loading">
       <div class="loading">
         <div class="circle"></div>
       </div>
     </div> -->
+    <div class="bg">
+      <div class="loading">
+        <div>
+            <span class="dot"></span>
+        </div>
+      </div>
+    </div>
 
     <!-- main ===============================================================-->
     <div class="swiper-container star_swiper" id="home">
