--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -100,8 +100,8 @@
               <div class="swiper-slide slide_one">
                 <!-- <p class="wow fadeInLeft animated">slide from left</p> -->
                 <!-- <div data-swiper-animation="fadeIn" data-duration=".5s" data-delay="1s">Animation</div> -->
-                <!-- <div class="parallax-bg" style="background-image:url(images/mainslideimg.jpg)" data-swiper-parallax="-23%">
-                </div> -->
+                <div class="parallax-bg" style="background-image:url(images/mainslideimg.jpg)" data-swiper-parallax="-23%">
+                </div>
                 <div class="slide_text">
                   <!-- <p>WELCOME<br>TO MY<br>PORTFOLIO PAGE</p> -->
                   <p>WELCOME TO MY PORTFOLIO PAGE</p>
@@ -119,8 +119,8 @@
                 <!-- 고정 텍스트 end -->
               </div>
               <div class="swiper-slide about_two">
-                <!-- <div class="parallax-bg" style="background-image:url(images/mainslideimg.jpg)" data-swiper-parallax="-23%">
-                </div> -->
+                <div class="parallax-bg" style="background-image:url(images/mainslideimg.jpg)" data-swiper-parallax="-23%">
+                </div>
                 <div class="about_logo" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="5s">
                   <!-- 클래스 로고 백그라운드에 이미지 깔기 -->
                   <!-- 로고 -->
