--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/star.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/loading.css">
     <link rel="stylesheet" href="css/isotope.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -25,42 +25,45 @@
         <div class="circle"></div>
       </div>
     </div> -->
-    <div class="bg">
+    <!-- <div class="bg">
       <div class="loading">
         <div>
             <span class="dot"></span>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- main ===============================================================-->
-    <div class="swiper-container star_swiper" id="home">
-      <div class="parallax-bg main_parallax_bg" data-swiper-parallax="-20%">
-        <a href="#"></a>
-      </div>
-      <div>
-        <div>
-          <div class="title">
-            <!-- maintext -->
-              <!-- <div class="maintext">
-                <div class="bar1">H</div>
-                <div class="bar2">E</div>
-                <div class="bar3">L</div>
-                <div class="bar4">L</div>
-                <div class="bar5">O</div>
-                <div class="bar6">,</div>
-                <div class="bar7">T</div>
-                <div class="bar8">H</div>
-                <div class="bar9">E</div>
-                <div class="bar10">R</div>
-                <div class="bar11">E</div>
-              </div> -->
-              <h2 class="wow fadeInUp animated">Portfolio<br>/<br>Areum Jeon</h2>
-              <!-- maintext end -->
-            </div>
+      <div class="star" id="home">
+        <div class="parallax-bg main_parallax_bg" data-swiper-parallax="-20%">
+          <a href="#"></a>
+        </div>
+        <div class="star_wrap">
+          <!-- <div> -->
+            <div class="title">
+              <!-- maintext -->
+                <div class="maintext1">
+                  <div class="bar1">H</div>
+                  <div class="bar2">E</div>
+                  <div class="bar3">L</div>
+                  <div class="bar4">L</div>
+                  <div class="bar5">O</div>
+                  <div class="bar6"></div>
+                  <div class="bar7">T</div>
+                  <div class="bar8">H</div>
+                  <div class="bar9">E</div>
+                  <div class="bar10">R</div>
+                  <div class="bar11">E</div>
+                </div>
+                <ul class="maintext2">
+                  <li class="wow fadeInUp animated">Portfolio</li>
+                  <li class="wow fadeInUp animated">/</li>
+                  <li class="wow fadeInUp animated">Areum Jeon</li>
+                </ul>
+              </div>
+          <!-- </div> -->
         </div>
       </div>
-    </div>
     <!-- <div class="intro">
       <button><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
     </div> -->
