--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -20,25 +20,20 @@
   <body>
 
     <!-- loading ============================================================-->
-    <!-- <div class="wrap_loading">
-      <div class="loading">
-        <div class="circle"></div>
-      </div>
-    </div> -->
-    <!-- <div class="bg">
+    <div class="bg">
       <div class="loading">
         <div>
             <span class="dot"></span>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- main ===============================================================-->
       <div class="star" id="home">
         <div class="parallax-bg main_parallax_bg" data-swiper-parallax="-20%">
           <a href="#"></a>
         </div>
-        <div class="star_wrap">
+        <div class="title_wrap">
           <!-- <div> -->
             <div class="title">
               <!-- maintext -->
@@ -64,9 +59,9 @@
           <!-- </div> -->
         </div>
       </div>
-    <!-- <div class="intro">
+    <div class="intro">
       <button><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
-    </div> -->
+    </div>
 
     <!-- header ==========================================================-->
     <header>
@@ -95,9 +90,8 @@
 
     <!-- contents ==============================================================-->
       <section>
-        <!-- slide ==============================================================-->
+        <!-- slide -->
         <article id="slide" class="box">
-          <!-- Swiper -->
           <div class="swiper-container main_slide">
             <div class="swiper-wrapper">
               <div class="swiper-slide slide_one">
@@ -115,16 +109,16 @@
                   <p>PASSION</p>
                   <p>CHALLENGE</p>
                 </div> -->
-                <div class="button_link">
+                <div class="button_link1">
                   <a href="#"><em>about me</em></a>
                   <a href="#"><em>my work</em></a>
                 </div>
                 <!-- 고정 텍스트 end -->
               </div>
-              <div class="swiper-slide about_two">
+              <div class="swiper-slide slide_two">
                 <div class="parallax-bg" style="background-image:url(images/mainslideimg.jpg)" data-swiper-parallax="-23%">
                 </div>
-                <div class="about_logo" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="5s">
+                <div class="slide_logo" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="5s">
                   <!-- 클래스 로고 백그라운드에 이미지 깔기 -->
                   <!-- 로고 -->
                   <img src="images/html_Logo.png" alt="html 로고 이미지">
