--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -418,7 +418,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/swiper-animation@1/build/SwiperAnimation.min.js"></script> -->
-    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script> -->
     <script src="js/jquery.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/star.js"></script>
