--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- main ===============================================================-->
-      <div class="star wow fadeInUp animated" id="home">
+      <div class="star" id="home">
         <div class="parallax-bg main_parallax_bg" data-swiper-parallax="-20%">
           <a href="#"></a>
         </div>
