--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -58,10 +58,10 @@
               </div>
           <!-- </div> -->
         </div>
+        <div class="intro">
+          <button><i class="fas fa-angle-double-down"></i></button>
+        </div>
       </div>
-    <div class="intro">
-      <button><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
-    </div>
 
     <!-- header ==========================================================-->
     <header>
@@ -73,17 +73,16 @@
         <div class="nav">
           <button>
             <i class="fa fa-bars" aria-hidden="true"></i>
-            <span class="skip">버튼</span>
+            <!-- <span class="skip">버튼</span> -->
           </button>
-          <nav class="animated fadeInRight">
-            <ul>
-              <li class="col-xs-12 col-sm-2 col-md-2"><a href="#home">HOME</a></li>
-              <li class="col-xs-12 col-sm-2 col-md-2"><a href="#about">ABOUT</a></li>
-              <li class="col-xs-12 col-sm-2 col-md-2"><a href="#skill">SKILL</a></li>
-              <li class="col-xs-12 col-sm-2 col-md-2"><a href="#work">WORK</a></li>
-              <li class="col-xs-12 col-sm-2 col-md-2"><a href="#contact">CONTACT</a></li>
-            </ul>
-          </nav>
+          <!-- <nav class="animated fadeInRight"> -->
+          <ul>
+            <li class="col-xs-12 col-sm-2 col-md-2"><a href="#home">HOME</a></li>
+            <li class="col-xs-12 col-sm-2 col-md-2"><a href="#about">ABOUT</a></li>
+            <li class="col-xs-12 col-sm-2 col-md-2"><a href="#skill">SKILL</a></li>
+            <li class="col-xs-12 col-sm-2 col-md-2"><a href="#work">WORK</a></li>
+            <li class="col-xs-12 col-sm-2 col-md-2"><a href="#contact">CONTACT</a></li>
+          </ul>
         </div>
       </div>
     </header>
